src/test/ui/suggestions/str-array-assignment.stderr
error[E0308]: if and else have incompatible types
  --> $DIR/str-array-assignment.rs:13:11
   |
13 |   let t = if true { s[..2] } else { s };
   |           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected str, found &str
   |
   = note: expected type `str`
              found type `&str`

error[E0308]: mismatched types
  --> $DIR/str-array-assignment.rs:14:27
   |
11 | fn main() {
   |           - expected `()` because of default return type
...
14 |   let u: &str = if true { s[..2] } else { s };
   |                           ^^^^^^ expected &str, found str
   |
   = note: expected type `&str`
              found type `str`

error[E0277]: the trait bound `str: std::marker::Sized` is not satisfied
  --> $DIR/str-array-assignment.rs:15:7
   |
15 |   let v = s[..2];
   |       ^   ------ help: consider a slice instead: `&s[..2]`
   |       |
   |       `str` does not have a constant size known at compile-time
   |
   = help: the trait `std::marker::Sized` is not implemented for `str`
   = note: all local variables must have a statically known size

error[E0308]: mismatched types
  --> $DIR/str-array-assignment.rs:16:17
   |
16 |   let w: &str = s[..2];
   |                 ^^^^^^ expected &str, found str
   |
   = note: expected type `&str`
              found type `str`
   = help: try with `&s[..2]`

error: aborting due to 4 previous errors

